--- a/templates/office/new_bill.html
+++ b/templates/office/new_bill.html
@@ -124,7 +124,7 @@
                 <div class="main_head">दर</div>
                 <div class="main_head">रक्कम</div>
                 <div class="main_containt">{% item_weight_detail c.id %}</div>
-                <div class="main_containt"><input type="number" oninput="check_zero('cart_qty{{c.id}}'),check_input_show_btn_for_prise_and_qty('{% if c.qty == 0 %}{% else %}{{c.qty}}{% endif %}' ,'cart_qty', 'qty_btn', '{{c.id}}')" value="{% if c.qty == 0 %}{% else %}{{c.qty}}{% endif %}" id="cart_qty{{c.id}}" style="width: 40px;" required><br><p class="mb-0"><i style="display: none;" onclick="cart_qty('{{c.id}}')" id="qty_btn{{c.id}}" class="fa-solid fa-check"></i></p></div>
+                <div class="main_containt"><input type="number" oninput="check_zero('cart_qty{{c.id}}'),check_input_show_btn_for_prise_and_qty('{% if c.qty == 0 %}{% else %}{{c.qty}}{% endif %}' ,'cart_qty', 'qty_btn', '{{c.id}}'),check_stock_qty('{{c.stock_item.stock_qty}}', '{{c.id}}', '{{c.qty}}')" value="{% if c.qty == 0 %}{% else %}{{c.qty}}{% endif %}" id="cart_qty{{c.id}}" style="width: 40px;" required><br><p class="mb-0"><i style="display: none;" onclick="cart_qty('{{c.id}}')" id="qty_btn{{c.id}}" class="fa-solid fa-check"></i></p></div>
                 <div class="main_containt"> <input type="text" value="{% if n == 0 %}{% else %}{{n}}{% endif %}" style="width: 40px;" required readonly="readonly"></div>
                 <div class="main_containt"  ><input step="any" value="{% if c.prise == 0 %}{% else %}{{c.prise | floatformat:2}}{% endif %}" type="number" id="prise{{c.id}}" oninput="check_zero('prise{{c.id}}'),check_input_show_btn_for_prise_and_qty('{% if c.prise == 0 %}{% else %}{{c.prise | floatformat:2}}{% endif %}' ,'prise', 'prise_btn', '{{c.id}}')"  style="width: 40px;" required><br><p class="mb-0"><i style="display: none;" id="prise_btn{{c.id}}" onclick="calculete_prise('{{n}}','{{c.id}}'),total_amount_calculate('{{total_item_amount}}')" class="fa-solid fa-check"></i></p></div>
                 <div class="main_containt" id="set_amount_div{{c.id}}">{% calculete_item_prise n c.prise as calculete_item_prise %}<input type="text" value="{% if calculete_item_prise == 0.0 %}{% else %}{{calculete_item_prise}}{% endif %}" style="width: 60px;" required></div>
@@ -232,6 +232,19 @@
 <br>
 <br>
 <script>
+function check_stock_qty(stock_qty, c_id, c_qty){
+    input = document.getElementById('cart_qty'+c_id).value;
+    if (Number(c_qty) > Number(input)){
+
+    }
+    else if (Number(stock_qty) <= Number(input)){
+        v = Number(c_qty) + Number(stock_qty)
+        if (v == 0){
+            v = c_qty
+        }
+        document.getElementById('cart_qty'+c_id).value = v;
+    }
+}
 function check_zero(id){
     element_id =""+ id +""
     number = document.getElementById(element_id).value;
