--- a/templates/office/stock.html
+++ b/templates/office/stock.html
@@ -2,6 +2,7 @@
 {% block head %}
 {% endblock head %}
 {% block content %}
+{% load office_tag %}
 {% include 'include/alert.html' %}
 <div>
     welcome - {{employee.name}}
@@ -105,6 +106,49 @@
       top: 0;
     }
   </style>
+<style>
+  .stock_box{
+      width: 92%;
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      border: 1px solid black;
+      border-radius: 10px;
+      margin-bottom: 20px;
+      position: relative;
+  }
+  .flex{
+      display: flex;
+      gap: 10px;
+      justify-content: center;
+  }
+  .product_name{
+      background-color: rgb(255, 182, 182);
+      padding: 10px;
+      font-weight: 700;
+      border-top-left-radius: 10px;
+      border-top-right-radius: 10px;
+  }
+  .category_name{
+      position: absolute;
+      right: 10px;
+      top: 0;
+  }
+</style>
+<style>
+  .other_charges_box{
+      justify-content: space-between;
+      display: flex;
+  }
+  .other_charges{
+      display: flex;
+      flex-direction: column;
+      input{
+          width: 50px;
+      }
+  }
+</style>
   <div class="text-center">
     {% for s in stock %}
         <div class="stock_box">
@@ -142,11 +186,47 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
+          <div class="stock_box">
+            <div class="category_name">{{s.item_category.name}}</div>
+            <div class="product_name">{{s.item_name_marathi}}</div>
+            <div class="p-2">
+                <div class="flex" style="justify-content: space-evenly;">
+                    <div>{{s.party_name}}</div>
+                    <div style="text-transform: uppercase;">{{s.vehicle_number}}</div>
+                </div>
+                <div class="flex" style="justify-content: space-between;">
+                    <div><b>एकूण</b> - &nbsp;&nbsp;&nbsp;&nbsp; वजन   <b>{{s.weight}}</b></div>
+                    <div>नग   <b>{{s.qty}}</b></div>
+                </div>
+                <div class="flex" style="justify-content: space-between;">
+                    <div><b>विक्री </b> - &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; वजन   <b>{% sell_weight s.weight s.stock_weight %}</b></div>
+                    <div>नग   <b>{% sell_qty s.qty s.stock_qty %}</b></div>
+                </div>
+                <div class="flex" style="padding: 5px; justify-content: space-between;background-color: rgb(255, 183, 183);">
+                    <div><b>शिल्लक</b> - &nbsp; वजन   <b>{{s.stock_weight}}</b></div>
+                    <div>नग   <b>{{s.stock_qty}}</b></div>
+                </div>
+                <div class="flex">
+                    <div>खरेदी रक्कम<b>&nbsp;{{s.purchase_amount}}</b></div>&nbsp;&nbsp;
+                    <div>विक्री रक्कम<b> &nbsp; {% sell_amount s.purchase_amount s.id as n %}{{n}}</b></div>
+                </div>
+                <div class="flex">
+                    <div>{% profit_loss s.purchase_amount n %}</div>
+                </div>
+                <div class="flex" style="justify-content: space-between;">
+                    <div>Added By - {{s.office_employee.name}}</div>
+                    <div>{{s.date}}</div>
+                </div>
+            </div>
+            {% item_stock_summary employee.shope.id s.id %}
+        </div>
+          <hr>
+          <div class="text-center alert alert-warning">खात्री पूर्वक सदर स्टॉक समाप्त करायचा आहे का ?</div>
           <div class="text-start">
-            <form method="POST">
+            <form method="POST">{% csrf_token %}
               <input type="hidden" value="{{s.id}}" name="stock_id">
               <div class="mb-3">
-                <label for="pin{{s.id}}">Delete Pin</label>
+                <label for="pin{{s.id}}">Secret Pin</label>
                 <input type="number" class="form-control" id="pin{{s.id}}" oninput="check_pin('pin{{s.id}}', 'close_stock_btn{{s.id}}')">
               </div>
               <button style="display: none;" class="btn btn-danger" name="close_stock" id="close_stock_btn{{s.id}}">Close</button>
