--- a/templates/ajax/office/add_to_item_weight.html
+++ b/templates/ajax/office/add_to_item_weight.html
@@ -93,7 +93,8 @@
 
 
 <script>
-    
+    old_amount = '{{total_item_amount}}'
+    total_amount_calculate(old_amount)
 function total_amount_calculate(old_amount){
     new_amount = Number(old_amount) +
              (
