--- a/templates/office/item_category.html
+++ b/templates/office/item_category.html
@@ -31,7 +31,7 @@
                     <input type="text" id="name" name="name" placeholder="Name" class="form-control" required>
                 </div>
                 <div class="mb-3">
-                    <label for="shears">Shears</label>
+                    <label for="shears">Shears %</label>
                     <input type="text" id="shears" name="shears" placeholder="Shears" class="form-control" required>
                 </div>
                 <div class="mb-2 mt-1">
@@ -53,7 +53,7 @@
           <tr>
             <th scope="col">#</th>
             <th scope="col">Name</th>
-            <th scope="col">Shears</th>
+            <th scope="col">Shears %</th>
             <th scope="col">Status</th>
             <th scope="col">Edit</th>
           </tr>
@@ -82,7 +82,7 @@
                         <input type="text" id="name" value="{{i.name}}" name="name" placeholder="Name" class="form-control" required>
                     </div>
                     <div class="mb-3">
-                      <label for="shears">Shears</label>
+                      <label for="shears">Shears %</label>
                       <input type="number" step="any" id="shears" name="shears" value="{{i.shears}}" placeholder="Shears" class="form-control" required>
                     </div>
                     <div class="mb-2 mt-1">
