--- a/templates/office/completed_view_bill.html
+++ b/templates/office/completed_view_bill.html
@@ -92,6 +92,9 @@ a{
     color: #000;
     text-decoration: none;
 }
+.bill_main_header{
+        display: none;
+    }
 </style>
 <style media="print">
     .bill_box{
@@ -124,15 +127,20 @@ a{
         display: flex;
         justify-content: center;
     }
+    .bill_main_header{
+        display: unset;
+    }
 </style>
 
 
 <div class="bill_box">
     <div class="header">
-        <div class="shope_name"><b>{{order_master.shope.shope_name}}</b></div>
-        <div class="description"><p>{{order_master.shope.description}}</p></div>
-        <div class="address">{{order_master.shope.address}}</div>
-        <div class="contact_details">{{order_master.shope.contact_details}}</div>
+        <div class="bill_main_header">
+            <div class="shope_name"><b>{{order_master.shope.shope_name}}</b></div>
+            <div class="description"><p>{{order_master.shope.description}}</p></div>
+            <div class="address">{{order_master.shope.address}}</div>
+            <div class="contact_details">{{order_master.shope.contact_details}}</div>
+        </div>
         <div class="bill_number_box">
             <div class="bill_number">बिल नंबर - {{order_master.order_filter}}</div>
             <div class="date">दिनांक  - {{order_master.ordered_date}}</div>
@@ -196,11 +204,123 @@ a{
 </div>
 <div class="advertise ad_a">All type Mobile Software - <a href="https://digitalkarmala.com/contact_us/">9730 99 1252</a> </div></a>
 
-
+<div class="hide container">
+    <div class="mb-3 mt-2 border p-3 text-center" style="display: flex;gap: 10px; background-color: rgba(255, 191, 191, 0.774);">
+        <label for="cash">बाकी </label>
+        <input type="text" style="text-align: center;font-weight: 700;color: white; background-color: red;" class="form-control" value="{{total_pending_amount}}"  id="total_pending_amount" readonly>
+    </div>
+    <div class="mb-3 mt-2 border p-3 text-center" style="background-color: rgb(202, 255, 202);">
+        <label for="cash">रोख</label>
+        <div class="" style="display: flex;gap: 10px;">
+            <input  placeholder="रक्कम टाका" type="text" class="form-control"  id="cash_amount" oninput="check_cash_amount('{{total_pending_amount}}')">
+            <div id="cash_btn" style="display: none;" onclick="save_cash_amount()"><button class="btn btn-success"><i class="fa-solid fa-check"></i></button></div>
+        </div>
+    </div>
+    {% for p in phonepe %}
+        <div class="mb-3 mt-2 border p-3 text-center" style="background-color: hsl(236, 100%, 80%);">
+            <label for="cash">{{p.phonepe_name}} - {{p.phonepe_number}}</label>
+            <div class="" style="display: flex;gap: 10px;">
+                <input placeholder="रक्कम टाका" type="text" class="form-control"  id="phonepe_amount{{p.id}}" oninput="check_phonepe_amount('phonepe_amount{{p.id}}', 'phonepe_btn{{p.id}}', '{{total_pending_amount}}')">
+                <div id="phonepe_btn{{p.id}}" style="display: none;" onclick="save_phonepe_amount('{{p.id}}','phonepe_amount{{p.id}}')"><button class="btn btn-success"><i class="fa-solid fa-check"></i></button></div>
+            </div>
+        </div>
+    {% endfor %}
+    <br>
+    <div class=" text-center p-3 border" id="transition_histry" style="display: grid;grid-template-columns: 2fr 1fr;">
+        {% for c in cash_transition %}
+            <div>Cash </div>
+            <div><b>Rs.{{c.amount}}</b></div>
+        {% endfor %}
+        {% for pt in phonepe_transition %}
+            <div>{{pt.phonepe_number.phonepe_number}} </div>
+            <div><b>Rs.{{pt.amount}}</b></div>
+        {% endfor %}
+        <div style="background-color: rgb(194, 255, 255); border-radius: 5px;">Total</div>
+        <div style="background-color: rgb(0, 255, 255); border-radius: 5px;"><b>Rs.{{total_credit}}</b></div>
+    </div>
+</div>
 
 
 <div class="text-center hide">
     <button class="btn btn-primary" onclick="window.print()">Print</button>
 </div>
 
+
+<script>
+    shope_id = '{{employee.shope.id}}'
+    employee_id = '{{employee.id}}'
+    order_master_id = '{{order_master.id}}'
+    function check_phonepe_amount(input_id, btn_id,pending_amount){
+        input = document.getElementById(input_id).value
+        if(Number(input) > 0){
+            document.getElementById(btn_id).style.display = 'unset'
+        }
+        if(Number(input) < 1){
+            document.getElementById(btn_id).style.display = 'none'
+        }
+        if(Number(input) > Number(pending_amount)){
+            document.getElementById(btn_id).style.display = 'none'
+            input = document.getElementById(input_id).value = ''
+        }
+        if(Number(input) < 0){
+            document.getElementById(btn_id).style.display = 'none'
+            input = document.getElementById(input_id).value = ''
+        }
+    }
+    function check_cash_amount(pending_amount){
+        input = document.getElementById('cash_amount').value
+        if(Number(input) > 0){
+            document.getElementById('cash_btn').style.display = 'unset'
+        }
+        if(Number(input) < 1){
+            document.getElementById('cash_btn').style.display = 'none'
+        }
+        if(Number(input) > Number(pending_amount)){
+            document.getElementById('cash_btn').style.display = 'none'
+            input = document.getElementById('cash_amount').value = ''
+        }
+        if(Number(input) < 0){
+            document.getElementById('cash_btn').style.display = 'none'
+            input = document.getElementById('cash_amount').value = ''
+        }
+
+    }
+    function save_phonepe_amount(phonepe_id, input_id){
+        $.ajax({
+            url: "{% url 'save_phonepe_amount' %}",
+            method: "GET",
+            data:{
+                shope_id:shope_id,
+                office_employee_id:employee_id,
+                phonepe_number_id:phonepe_id,
+                order_master_id:order_master_id,
+                cash_amount:document.getElementById(input_id).value
+                },
+                success: function(res){
+                    document.getElementById(input_id).value = ''
+                    document.getElementById('transition_histry').innerHTML = res.t
+                    document.getElementById('total_pending_amount').value = res.total_pending_amount
+                    document.getElementById('phonepe_btn'+phonepe_id).style.display = 'none'
+            }
+        })
+    }
+    function save_cash_amount(cash_id){
+        $.ajax({
+            url: "{% url 'save_cash_amount' %}",
+            method: "GET",
+            data:{
+                shope_id:shope_id,
+                office_employee_id:employee_id,
+                order_master_id:order_master_id,
+                cash_amount:document.getElementById('cash_amount').value
+            },
+            success: function(res){
+                document.getElementById('cash_amount').value = ''
+                document.getElementById('transition_histry').innerHTML = res.t
+                document.getElementById('total_pending_amount').value = res.total_pending_amount
+                document.getElementById('cash_btn').style.display = 'none'
+            }
+        })
+    }
+</script>
 {% endblock content %}
