--- a/templates/office/stock.html
+++ b/templates/office/stock.html
@@ -62,6 +62,10 @@
                 <input type="number" class="form-control" oninput="check_zero('purchase_amount')" id="purchase_amount" name="purchase_amount" required>
             </div>
             <div class="mb-3">
+                <label for="vehicle_charges">Vehicle Charges</label>
+                <input type="number" class="form-control" oninput="check_zero('purchase_amount')" id="vehicle_charges" name="vehicle_charges" required>
+            </div>
+            <div class="mb-3">
                 <button type="submit" name="Add_stock" class="btn btn-success">Add</button>
             </div>
           </form>
@@ -168,13 +172,19 @@
             <div class="flex" style="justify-content: space-between;">
                 <div>Added By - {{s.office_employee.name}}</div>
                 <div>{{s.date}}</div>
-            </div>
-            <div class="flex" style="justify-content: space-between;">
-              <div>Purchase Rs.</div>
-              <div><input type="number" oninput="check_zero('purchase_amount1')" id="purchase_amount1" value="{{s.purchase_amount}}" class="form-control"></div>
-              <div><i class="fa-solid fa-check" onclick="set_purchase_amount('{{s.id}}')"></i></div>
-              <div>  &nbsp; </div>
-            </div>
+              </div>
+              <div class="flex" style="justify-content: space-between;">
+                <div>Purchase Rs.</div>
+                <div><input type="number" oninput="check_zero('purchase_amount1{{s.id}}')" id="purchase_amount1{{s.id}}" value="{{s.purchase_amount}}" class="form-control"></div>
+                <div><i class="fa-solid fa-check" onclick="set_purchase_amount('{{s.id}}')"></i></div>
+                <div>  &nbsp; </div>
+              </div>
+              <div class="flex" style="justify-content: space-between;">
+                  <div>मोटार भाडे</div>
+                  <div><input type="number" oninput="check_zero('set_vehicle_charges{{s.id}}')" id="set_vehicle_charges{{s.id}}" value="{{s.vehicle_charges}}" class="form-control"></div>
+                  <div><i class="fa-solid fa-check" onclick="set_vehicle_charges('{{s.id}}')"></i></div>
+                  <div>  &nbsp; </div>
+              </div>
             <div id="status_success{{s.id}}"></div>
         </div>
   <!-- Modal -->
@@ -211,8 +221,9 @@
                     <div>विक्री रक्कम<b> &nbsp; {% sell_amount s.purchase_amount s.id as n %}{{n}}</b></div>
                 </div>
                 <div class="flex">
-                    <div>{% profit_loss s.purchase_amount n %}</div>
+                    <div>{% profit_loss s.purchase_amount s.vehicle_charges n %}</div>
                 </div>
+                
                 <div class="flex" style="justify-content: space-between;">
                     <div>Added By - {{s.office_employee.name}}</div>
                     <div>{{s.date}}</div>
@@ -263,7 +274,21 @@
       method: "GET",
       data:{
         s_id:s_id,
-        purchase_amount:document.getElementById('purchase_amount1').value
+        purchase_amount:document.getElementById('purchase_amount1'+s_id).value
+            },
+      success: function(res){
+          document.getElementById('status_success'+s_id).innerHTML = `<p class="text-success">Set Successfully</p>`
+      }
+    })
+  }
+  function set_vehicle_charges(s_id){
+
+    $.ajax({
+      url: "{% url 'set_vehicle_charges' %}",
+      method: "GET",
+      data:{
+        s_id:s_id,
+        set_vehicle_charges:document.getElementById('set_vehicle_charges'+s_id).value
             },
       success: function(res){
           document.getElementById('status_success'+s_id).innerHTML = `<p class="text-success">Set Successfully</p>`
