--- a/templates/office/new_bill.html
+++ b/templates/office/new_bill.html
@@ -180,7 +180,7 @@
         </div>
         <div class="other_charges">
             <div class="lable">शेअर्स</div>
-            <div class="containt"> <input type="number" value="{% calculete_shears employee.id %}" name="shears" class="check_zero4" id="शेअर्स" oninput="total_amount_calculate('{{total_item_amount}}'),check_zero('शेअर्स')" required> </div>
+            <div class="containt"> <input step="any" type="number" value="{% calculete_shears employee.id %}" name="shears" class="check_zero4" id="शेअर्स" oninput="total_amount_calculate('{{total_item_amount}}'),check_zero('शेअर्स')" required> </div>
         </div>
         <div class="other_charges">
             <div class="lable">इतर</div>
